[package]
name = "DH2Anvil"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.36.0", features = ["bundled"] }
fastanvil = "0.32.0"
byteorder = "1.5.0"
anyhow = "1.0.99"
xz2 = "0.1.7"
fastnbt = "2.6.0"
serde = "1.0.219"
serde_with = "3.14.0"
indicatif = "0.18.0"
genawaiter = "0.99.1"
# lzma_rust2

[profile.release]
debug = true
