[package]
name = "dh2anvil"
version = "0.2.0"
license = "MIT License"
edition = "2024"
authors = ["KNSN92"]

[dependencies]
anyhow = "1.0.99"
rusqlite = { version = "0.36.0", features = ["bundled"] }
byteorder = "1.5.0"
xz2 = "0.1.7"
fastnbt = "2.6.0"
fastanvil = "0.32.0"
serde = "1.0.219"
rayon = "1.11.0"
indicatif = "0.18.0"
clap = { version = "4.5.46", features = ["derive"] }
console = "0.16.1"

[profile.release]
debug = true
opt-level = 3
